<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.mahasiswa.LoginMahasiswaActivity">

    <ImageView
        android:id="@+id/iv_logo_onboarding"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/image_description_unh_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_unh" />

    <TextView
        android:id="@+id/tv_title_logo_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/lato"
        android:text="@string/title_logo_unh"
        android:textColor="@color/text_color_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo_onboarding"
        app:layout_constraintStart_toEndOf="@+id/iv_logo_onboarding"
        app:layout_constraintTop_toTopOf="@+id/iv_logo_onboarding" />

    <ImageView
        android:id="@+id/iv_icon_change_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-8dp"
        android:contentDescription="@string/title_icon_change_theme"
        app:layout_constraintBottom_toBottomOf="@+id/btn_change_theme"
        app:layout_constraintEnd_toStartOf="@+id/btn_change_theme"
        app:layout_constraintTop_toTopOf="@+id/btn_change_theme"
        app:srcCompat="@drawable/change_theme_icon"
        app:tint="@color/text_color_themed" />

    <Button
        android:id="@+id/btn_change_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/lato"
        android:text="@string/title_change_theme_mode"
        android:textAllCaps="false"
        android:textColor="@color/text_color_themed"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logo_onboarding" />

    <ImageView
        android:id="@+id/iv_login_mahasiswa"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/description_image_view_login_mahasiswa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_onboarding"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/login_image_mahasiswa" />

    <TextView
        android:id="@+id/tv_login_mahasiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/tv_login_mahasiswa_text"
        android:textAlignment="center"
        android:textColor="@color/text_color_themed"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_login_mahasiswa"
        app:layout_constraintStart_toStartOf="@+id/iv_login_mahasiswa"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_mahasiswa" />

    <EditText
        android:id="@+id/et_nim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_edit_text"
        android:drawableStart="@drawable/profile_icon"
        android:drawablePadding="12dp"
        android:drawableTint="@color/outline_color_theme"
        android:fontFamily="@font/lato"
        android:hint="@string/hint_nim"
        android:inputType="number"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/text_color_themed"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_mahasiswa" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_edit_text"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="12dp"
        android:drawableTint="@color/outline_color_theme"
        android:fontFamily="@font/lato"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/text_color_themed"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nim" />

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/lato"
        android:paddingEnd="0dp"
        android:text="@string/forgot_password_text"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/outline_color_theme"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_login_mahasiswa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/lato"
        android:padding="14dp"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password" />

    <TextView
        android:id="@+id/tv_doenst_have_an_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:padding="10dp"
        android:text="@string/doesnt_have_an_account_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_login_mahasiswa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_mahasiswa"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_register_login_mahasiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_gray"
        android:fontFamily="@font/lato"
        android:padding="14dp"
        android:text="@string/register_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>